cluster/apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: sonarr.k3s.ravenholm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            service:
              name: sonarr
              port:
                number: 80
  tls:
    - secretName: sonarr-certificate-secret
